update picture element src path, add live URL in README file

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <button class="hero__button">Get Started</button>
       </div>
       <picture>
-        <source media="(min-width: 1200px)" srcset="/assets/image-hero-desktop.webp" width="1046" heigth="938" />
-        <source media="(min-width: 768px)" srcset="/assets/image-hero-tablet.webp" width="695" heigth="723" />
-        <img src="/assets/image-hero-mobile.webp" width="870" height="818"
+        <source media="(min-width: 1200px)" srcset="./assets/image-hero-desktop.webp" width="1046" heigth="938" />
+        <source media="(min-width: 768px)" srcset="./assets/image-hero-tablet.webp" width="695" heigth="723" />
+        <img src="./assets/image-hero-mobile.webp" width="870" height="818"
           alt="woman with coffee mug and laptop, with labels reading Members 29k, Course hours 1451" />
       </picture>
     </section>
